--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,19 +1,20 @@
 \paragraph{Theoretical contributions}
-The theoretical section presents an accessible introduction to the electrodynamics of periodic structures. It starts from the fundamental Maxwell equations, develops the concept of waves propagating in vacuum and in resonant media. It shows how the local medium responds to oscillating electric field as a damped oscillator and how it influences the dispersion curves. Beyond this common approach, the nonlocal response is introduced, and it is shown that in homogeneous media it inevitably causes the material properties depend not only on the frequency, but also on the magnitude of the wave vector, which is known as spatial dispersion. 
-The spatial dispersion is a phenomenon common in optics, but it is usually negligible in homogeneous materials. In the electrodynamics of periodic structures,  it is particularly pronounced. More general shapes of the dispersion curves in spatially-dispersive media are illustrated in several figures. 
-The dispersion curves are also shown to become periodic with the wavevector, as a result of the Bloch theorem; the chapter further introduces the concepts of isofrequency contours, Brillouin zones and high-symmetry points in the reciprocal space, and discusses when the notions of group, phase and information velocity are applicable.
+The theoretical section presents an accessible introduction to the electrodynamics of periodic structures. It starts from the fundamental Maxwell equations, develops the concept of waves propagating in vacuum and in resonant media. It shows how the local medium responds to oscillating electric field as a damped oscillator and how it influences the dispersion curves. Beyond this common approach, the nonlocal response is introduced, and it is shown that in homogeneous media it inevitably causes the material properties to depend not only on the frequency, but also on the magnitude of the wave vector, which is known as spatial dispersion. 
 
-Nowadays, perhaps more than ever earlier, it is important to maintain an outlook over the history of the rapid scientific development. The following historical review traces back the origin of numerous concepts much earlier than the majority of metamaterial-related papers advertise. The analysis of how atomic lattices should be treated as homogeneous media puzzled physicists over a century ago, and the synthesis of inhomogeneous structures with desired macroscopic \textit{homogenized} behaviour is not much younger than the microwave technology on its own.
+This phenomenon is common in optics, but in homogeneous materials it is usually negligible. When the electrodynamics of periodic structures is concerned, the spatial dispersion is often particularly pronounced and should not be neglected. More general shapes of the dispersion curves in spatially-dispersive media are illustrated in several figures. 
 
-The historical part promotes the author's view of related, but independently developed, paradigms of \textit{artificial dielectrics} and \textit{negative-index media} unifying in the middle of twentieth century. In a similar manner it is argued that the resulting paradigm of \textit{negative-index metamaterials} unified with the concept of \textit{photonic crystals} in the early 21th century. The process of unification always sheds new light on the physical interpretation and is beneficial for conceptual development of the field. The historical review is a basis for outlining the boundary between metamaterials and photonic crystals.
+The dispersion curves are also shown to become periodic with regard to the wavevector, which is a result of the Bloch theorem; the chapter further introduces the concepts of isofrequency contours, Brillouin zones and high-symmetry points in the reciprocal space, and discusses the conditions under which the applicability for the notions of group, phase and information velocity are applicable.
+
+Nowadays, perhaps more than ever earlier, it is important to maintain an outlook over the history of the rapid scientific development. A  historical review follows which traces back the origin of numerous concepts much earlier than the majority of metamaterial-related papers advertise. % The analysis of how atomic lattices should be treated as homogeneous media puzzled physicists over a century ago, and the synthesis of inhomogeneous structures with desired macroscopic \textit{homogenized} behaviour is not much younger than the microwave technology on its own.
+The historical part promotes the author's view of paradigms of \textit{artificial dielectrics} and \textit{negative-index media}, which appear to have developed independently, to be unified around the middle of twentieth century. In a similar manner, it is argued that the resulting paradigm of \textit{negative-index metamaterials} unified with the concept of \textit{photonic crystals} in the early 21th century. The process of unification always sheds new light on the physical interpretation and is beneficial for conceptual development of the field. The historical review is a basis for outlining the boundary between metamaterials and photonic crystals, which concludes the theoretical section.
 
 \paragraph{Methodological contributions}
-Preparation of this thesis, which encompasses over 90 plots visualising the results from over 4000 separate computations, necessitated the development of an efficient and convenient platform for numerical simulations of electromagnetic waves in periodic structures.
-The computations are defined in the form of scripts in the Python language. At the expense of possibly slower learning curve than applications with a graphical user interface may offer, the great advantage of scripting is in seamless integration with pre- and post-processing of the simulation that would otherwise be prohibitively tedious. The scripts can also be modified for automated parametric scans, optimisation of the structure performance and to match experimental data.
+Preparation of this thesis, which encompasses over 90 plots that show the results from over 4000 separate computations, necessitated the development of an efficient and convenient platform for numerical simulations of electromagnetic waves in periodic structures.
+The computations are defined in the form of scripts in the Python language. At the expense of possibly slower learning curve than programs with a graphical user interface may offer, the great advantage of scripting is in seamless integration with pre- and post-processing of the simulation that would otherwise be prohibitively tedious. The scripts can also be modified for automated parametric scans, optimisation of the structure performance and to match experimental data.
 
-All scripts, containing over 5000 lines of Python code in total, were published online free of charge \cite{dominec2014_meep_metamaterials} with the hope that they would be reused for future numerical research.
+All scripts, containing roughly 5000 lines of Python code in total, were published online as open-source software \cite{dominec2014_meep_metamaterials} with the hope that they would be reused by others for future numerical research.
 
-In the Numerical chapter, the internal operation of the finite-difference time-domain computation method is described in detail. Particular attention was given to realistic definition of Lorentz-Drude models for dielectrics and metals, including author's empirical rules ensuring the numerical stability of the simulation. % +?
+In the Numerical chapter, the internal operation of the finite-difference time-domain computation method is described in detail. Particular attention was paid to realistic definition of Lorentz-Drude models for dielectrics and metals, including author's empirical rules for the numerical stability of the FDTD simulation. 
 
 %		All referred numerical methods, FDTD, PWEM and TMM, were tested also to give compatible and plausible results under oblique incidence and both TE/TM polarisations. 
 %  * We validated these FDTD computations against
@@ -23,9 +24,9 @@ In the Numerical chapter, the internal operation of the finite-difference time-d
 %  *  proposes a novel temporal shape for a wave source in FDTD that yields a flat-top spectrum in a well-defined 
 %		interval of frequencies
 
-The second part of the section describes how the same numerical algorithm can be used in different geometries to retrieve physical properties of the structure: the customary \textit{scattering-parameter method} is elaborated including its limitations and pitfalls, and finally it is compared to the less efficient, but more robust \textit{current-driven homogenisation} method. Both methods were extensively employed and compared in the results.
+The second part of the section describes how the same numerical algorithm can be used in different geometries to retrieve physical properties of the structure: the customary \textit{scattering-parameter method} is elaborated including its limitations and pitfalls, and finally it is compared to the \textit{current-driven homogenisation} method, which is less computationally efficient, but more robust against artifacts. Both methods were extensively employed and compared in the results.
 
-The inherent ambiguity of the scattering parameters method is often cited in the literature, both numerical and experimental. We resolved it in an original way, based on the purely mathematical consideration of the arccosine discontinuities in the complex plane. The correction algorithm was incorporated in the simulation post-processing scripts and its application on all presented results proves that it works reliably. 
+The inherent ambiguity of the scattering parameters method is often cited in the literature, both numerical and experimental. We resolved it in an own original way, based on the purely mathematical consideration of the arccosine discontinuities in the complex plane. The correction algorithm was incorporated in the simulation post-processing scripts and its application on all presented results proved that it works reliably. 
 % The current-driven homogenisation required to develop 
 %	  2) by mathematical means, the phase-ambiguity of the retrieved effective index by the s-parameter method 
 
@@ -33,26 +34,26 @@ The inherent ambiguity of the scattering parameters method is often cited in the
 The Results chapter fills the demand for some starting overview of the electromagnetic behaviour of ten common classes of metamaterials, in a didactic approach that the author felt to be missing in the available literature. %Where relevant, it also documents general 
 
 \begin{enumerate}
-\item{It starts with an one-dimensional photonic crystal, which can be viewed as the simplest nontrivial periodic structure. Its dispersion curves consist of alternating photonic bands and band-gaps, but no individual resonance can occur. The conditions for formation of a zero-width photonic band gap are shown in parametric scans. The low-frequency and high-frequency limits for the effective index of refraction are demonstrated.
+\item{It starts with an one-dimensional photonic crystal, which can be viewed as the simplest nontrivial periodic structure. Its dispersion curves consist of alternating photonic bands and band gaps, but no individual resonance can occur. The conditions for the formation of a zero-width photonic band gap are shown in parametric scans. The low-frequency and high-frequency limits for the effective index of refraction are demonstrated.
 } 
 \item{Replacing a dielectric layer with an array of metallic wires parallel to the electric field does not qualitatively change the high-frequency behaviour, but below the plasma frequency, it introduces plasma-like response with negative effective permittivity. The resulting plasma frequency is determined by the geometry; two plots compare the numeric results with analytic models with a good match.
 } 
 \item{Dividing the wires into a periodical array of cut-wires introduces the individual resonances; its imprint on the effective parameter spectra are described in detail, since it is characteristic also for resonances in all following structures. Parametric scans through wire radius and cut distance are shown to have nontrivial effects on the resonance frequency. Our experimental data from cut-wire array on silicon substrate are compared to numerical model, and the difference is explained as an effect of losses in the sample. 
 } 
-\item{The individual resonances with an electric dipole are compared to their counterparts with a magnetic dipole at the example of split-ring resonators. The most iconic structure with a single splitting in the ring is asymmetric, and it is demonstrated that all homogenization methods that assume symmetric parameters would more or less fail at this structure. The symmetric-splitting version, however, can be homogenized to obtain negative permeability. Further a combination of the double-split ring resonator with wire array is shown to yield the negative index of refraction with compatible results between the s-parameters method a current-driven homogenization.
+\item{The individual resonances with an electric dipole are compared to their counterparts with a magnetic dipole forming the fundamental resonance of split-ring resonators. The resonator with a single splitting in the ring is asymmetric, and it is demonstrated that all homogenization methods that do not account for the asymmetry yield erroneous results for this structure. The symmetric-splitting version, however, can be homogenized to obtain negative permeability. Further a combination of the double-split ring resonator with the wire array is shown to yield the negative index of refraction with compatible results between the s-parameters method a current-driven homogenization.
 } 
-\item{On the contrary, the next chapter is included to illustrate a clash between these two homogenization setups. When a central shunt conductor is added to a symmetric split-ring resonator, the electric type resonance is found as the first one in the spectrum. By continuous changes in the geometry, we demonstrate that the electric and magnetic resonances can be tuned against each other, and it might be expected they would form a region of negative refractive index. Nonetheless, the narrow resonance line shape combined with moderate spatial dispersion cause the dispersion curves to bend into a concave shape and the scattering-parameter method eventually fails to determine effective index of refraction, as is illustrated by four detailed plots.
+\item{On the contrary, the next chapter is included to illustrate a discrepancy between these two homogenization setups. When a central shunt conductor is added to a symmetric split-ring resonator, the electric type resonance becomes the fundamental one, and by continuous changes in the geometry the electric and magnetic resonance frequencies can be tuned compared to each other. While it might be intuitively expected they would form a region of negative refractive index, the simulations have shown that the narrow resonance line shape combined with moderate spatial dispersion cause the dispersion curves to bend into a concave shape. Consequently, the scattering-parameter method eventually fails to determine effective index of refraction, as is illustrated by four detailed plots.
 } 
-\item{Dielectric spherical resonators are shown to exhibit individual resonances of Mie type, the first of which is analogous to the resonance in split-ring resonator. With the exactly defined model of titanium dioxide the sphere is made of, we can deduce minimum dissipative losses that can be achieved in experiment and show what impact they have on the resonance spectra. Further we accompany the computed spectra with our experimental results, arguing that the substantial deviation thereof arises from inhomogeneity of the resonators in the sample. Taking the size dispersion into account gives a reasonable match with experiment. Extended sieving of the spheres improves the resonance deeper, but no negative permeability is reached.
+\item{Dielectric spherical resonators are shown to exhibit individual resonances of Mie type, the first of which is analogous to the resonance in split-ring resonator. With the exactly defined model of titanium dioxide the sphere is made of, we can deduce minimum dissipative losses that can be achieved in experiment and show what impact they have on the resonance spectra. Further we accompany the computed spectra with our experimental results, arguing that the substantial deviation thereof arises from inhomogeneity of the resonators in the sample. Taking the size dispersion into account gives a reasonable match with experiment. Extended sieving of the spheres improved the resonance deeper, but no negative permeability was reached.
 %		\add{Owing to the homogeneous broadening of the resonator resonance, caused by intrinsic losses of TiO$_{2}$, further sieving appears to lack any purpose. Not only this project broadens the numerous group of technically successful research projects pointed in utterly wrong direction, it also classifies into the lamentable subgroup of effort that could be entirely avoided if open and honest scientific discussion took place about the inherent problems. In this case, particularly, in all related papers it should be openly stated that the dielectric losses of TiO2 prevent building any applicable volume metamaterial, no matter how accurately the resonators are prepared.}
 } 
-\item{The spectra of dielectric rods parallel to the magnetic field are compared to that of dielectric spheres, pointing out their similarity. The resonant modes for low- and high-permittivity dielectrics are compared to illustrate that continuous changes in the dielectric permittivity lead to a qualitative change -- a crossover of the Mie and Bragg resonances in the spectra.
+\item{The spectra of dielectric rods parallel to the magnetic field were compared to that of dielectric spheres, pointing out their similarity. The resonant modes for low- and high-permittivity dielectrics were compared to illustrate that continuous changes in the dielectric permittivity lead to a qualitative change -- a crossover of the Mie and Bragg resonances in the spectra.
 } 
-\item{Similar effect is even more pronounced in the dielectric rods parallel to the electric field. Depending on the filling fraction and permittivity contrast, the structure can behave in different portions of spectra similar either to the one-dimensional photonic crystal, wire array, or exhibit negative index of refraction. By extensive parametric scans we demonstrate that the desirable latter mode of operation  can not be achieved, for any geometry, when the dielectric contrast is less than roughly 50, which precludes the use of any low-loss material commonly used in photonics. 
+\item{Similar change is even more pronounced in the dielectric rods parallel to the electric field. Depending on the filling fraction and permittivity contrast, the structure can behave differently in different portions of spectra: either as a one-dimensional photonic crystal, similar to a wire array, or exhibit negative index of refraction. By extensive parametric scans we demonstrated that the desirable latter mode of operation  can not be achieved, for any geometry, when the dielectric contrast is less than roughly 50, which precludes building negative-index metamaterial solely from any low-loss dielectric commonly used in photonics. 
 } 
-\item{At the example of metallic sheet with slits parallel to the magnetic field we show the effect of extraordinary transmission. We argue that it is mediated by standing surface plasmons, whose frequency depends on the slit periodicity, but is almost independent of their width. Further we show that with increasing the metal thickness, the extraordinary transmission down-tunes with accordance to the dispersion of slot-waveguide modes.
+\item{At the example of metallic sheet with slits parallel to the magnetic field we show the effect of extraordinary transmission. We argue that it is mediated by standing surface plasmons, whose frequency depends on the slit periodicity and is almost independent of their width. Further we show that with increasing the metal thickness, the extraordinary transmission down-tunes with accordance to the dispersion of slot-waveguide modes.
 } 
-\item{% TODO FISHNET
+\item{Finally, we show that the extraordinary transmission also mediates the propagation of waves in fishnet metamaterials, made of stacked perforated metallic sheets. 
 }
 \end{enumerate}
 
