--- a/fdphd.bib
+++ b/fdphd.bib
@@ -126,7 +126,7 @@
    YEAR = "2013",
    volume = "103",
    number = "22", 
-   eid = 221103,
+   %%% eid = "221103",
    %%%url = "http://scitation.aip.org/content/aip/journal/apl/103/22/10.1063/1.4836195",
    doi = "http://dx.doi.org/10.1063/1.4836195" 
 }
@@ -167,6 +167,9 @@
   year={2014},
   publisher={Optical Society of America}
 }
+
+Near-field spectroscopy of sub-wavelength (<λ/10) anisotropic dielectric resonators at terahertz frequencies 
+
 % TODO Opt. Express, Vol. 22, Issue 19, pp. 23034-23042 (2014) http://dx.doi.org/10.1364/OE.22.023034
 @inproceedings{mitrofanov2014nearirmmw,
   title={Near-field probing of the THz Mie magnetic mode in a single sub-wavelength TiO 2 sphere},
